--- a/theofficialaiuniversity-engine.html
+++ b/theofficialaiuniversity-engine.html
@@ -3,204 +3,282 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>AiN Truth Engine Output</title>
+<title>ai-nspired Truth Engine</title>
+<meta name="description" content="ai-nspired.com • Truth Engine output. Dynamic, professional, toggleable light/dark mode.">
 <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
-<link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&family=Merriweather:wght@300;700&display=swap" rel="stylesheet">
-
 <style>
-:root {
-    --dark-bg: #1a2a3a;
-    --dark-text: #f0f0f0;
-    --dark-accent-slate: #0d1226;
-    --dark-accent-silver: #c0c0c0;
-    --dark-border: #2a3559;
-    --light-bg: #f5f5f5;
-    --light-text: #1a1a1a;
-    --light-accent-slate: #e0e0e0;
-    --light-accent-silver: #999999;
-    --glow-color: rgba(240,240,240,0.8);
-}
+    @import url('https://fonts.googleapis.com/css2?family=VT323&family=Special+Elite&display=swap');
 
-* { box-sizing: border-box; transition: all 0.3s ease; }
+    :root {
+        --bg-dark: #010409;
+        --text-dark: #e0e0e0;
+        --border-dark: #30363d;
+        --modal-bg-dark: #0d1117;
 
-body {
-    margin: 0;
-    font-family: 'Merriweather', serif;
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 40px 20px 20px 20px;
-    text-align: center;
-    background-color: var(--dark-bg);
-    color: var(--dark-text);
-    background-image: url('https://www.transparenttextures.com/patterns/dark-matter.png');
-    transition: all 0.3s ease;
-}
+        --bg-light: #f8f8ff;
+        --text-light: #1a1a1a;
+        --border-light: #ccc;
+        --modal-bg-light: #ffffff;
 
-.container {
-    max-width: 800px;
-    width: 100%;
-    padding: 2.5rem 2rem;
-    background-color: var(--dark-accent-slate);
-    box-shadow: 0 15px 40px rgba(0,0,0,0.5), 0 0 25px var(--glow-color);
-    border-top: 5px solid var(--dark-accent-silver);
-    transition: all 0.3s ease;
-}
+        --accent-silver: #c0c0c0;
+    }
 
-.header h1 {
-    font-family: 'Cinzel', serif;
-    font-size: clamp(1.5rem, 3vw, 2.5rem);
-    color: var(--dark-text);
-    text-transform: uppercase;
-    text-shadow: 0 0 15px var(--glow-color), 0 0 25px rgba(240,240,240,0.5);
-}
+    body {
+        margin: 0;
+        padding: 2rem;
+        font-family: 'VT323', monospace;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        min-height: 100vh;
+        background-color: var(--bg-dark);
+        color: var(--text-dark);
+        transition: all 0.3s ease;
+    }
 
-.header h2 {
-    font-family: 'Merriweather', serif;
-    font-size: clamp(1.1rem, 2vw, 1.4rem);
-    color: var(--dark-accent-silver);
-    margin-top: 1rem;
-    font-weight: 400;
-}
+    .terminal-window {
+        width: 100%;
+        max-width: 800px;
+        text-align: left;
+    }
 
-.result-container {
-    margin-top: 2rem;
-    padding: 2rem;
-    text-align: left;
-    line-height: 1.8;
-    border-radius: 8px;
-    transition: all 0.3s ease;
-}
+    .typed-text {
+        display: inline-block;
+        overflow: hidden;
+        white-space: nowrap;
+        border-right: 3px solid var(--accent-silver);
+        animation: typing 3.5s steps(40, end), blink-caret .75s step-end infinite;
+    }
 
-.result-container.glow {
-    animation: glowPulse 1s ease-in-out;
-}
+    @keyframes typing {
+        from { width: 0 }
+        to { width: 100% }
+    }
+    @keyframes blink-caret {
+        from, to { border-color: transparent }
+        50% { border-color: var(--accent-silver); }
+    }
 
-@keyframes glowPulse {
-    0% { box-shadow: 0 0 10px var(--glow-color); }
-    50% { box-shadow: 0 0 25px var(--glow-color); }
-    100% { box-shadow: 0 0 10px var(--glow-color); }
-}
+    .command-line {
+        display: flex;
+        align-items: center;
+        margin-top: 0.5rem;
+    }
+    .command-line::before { content: '>'; margin-right: 1rem; }
 
-button {
-    padding: 0.8rem 1.2rem;
-    font-family: 'Cinzel', serif;
-    font-weight: 700;
-    cursor: pointer;
-    margin: 0.5rem;
-}
+    .search-input {
+        background: transparent;
+        border: none;
+        color: inherit;
+        font-family: 'VT323', monospace;
+        font-size: 1.5rem;
+        flex-grow: 1;
+        outline: none;
+    }
 
-#toggleTheme {
-    position: fixed;
-    top: 20px;
-    right: 20px;
-    background: var(--dark-accent-silver);
-    color: var(--dark-accent-slate);
-    border: none;
-    border-radius: 5px;
-}
+    .modal-overlay {
+        position: fixed;
+        top: 0; left: 0;
+        width: 100%; height: 100%;
+        background: rgba(13, 17, 23, 0.9);
+        backdrop-filter: blur(8px);
+        display: none;
+        justify-content: center;
+        align-items: center;
+        z-index: 1000;
+        animation: fadeIn 0.5s ease;
+    }
+    .modal-overlay.active { display: flex; }
 
-.copy-btn, .tts-btn {
-    background: none;
-    border: 1px solid currentColor;
-    padding: 0.5rem 1rem;
-    margin-top: 1rem;
-}
+    .modal-container {
+        background-color: var(--modal-bg-dark);
+        border: 1px solid var(--border-dark);
+        border-radius: 8px;
+        width: 90%; max-width: 900px; height: 90vh;
+        box-shadow: 0 20px 50px rgba(0,0,0,0.5);
+        display: flex; flex-direction: column;
+    }
 
-.light-mode {
-    background-color: var(--light-bg);
-    color: var(--light-text);
-}
+    .modal-header {
+        display: flex; justify-content: space-between; align-items: center;
+        padding: 0.5rem 1.5rem; border-bottom: 1px solid var(--border-dark);
+    }
+    .modal-title { color: var(--accent-silver); }
+    .close-modal { background: none; border: none; color: var(--accent-silver); font-size: 2rem; cursor: pointer; }
 
-.light-mode .container {
-    background-color: var(--light-accent-slate);
-    border-top: 5px solid var(--light-accent-silver);
-}
+    .result-container {
+        padding: 2rem;
+        flex-grow: 1;
+        overflow-y: auto;
+        transition: all 0.3s ease;
+        font-family: 'Special Elite', cursive;
+    }
 
-.light-mode .header h1 {
-    color: var(--light-text);
-    text-shadow: 0 0 10px var(--light-accent-silver);
-}
+    .modal-footer {
+        display: none;
+        padding: 1rem;
+        border-top: 1px solid var(--border-dark);
+        justify-content: flex-end; gap: 1rem;
+    }
+    .modal-footer button {
+        background: none;
+        border: 1px solid var(--accent-silver);
+        color: var(--accent-silver);
+        font-family: 'VT323', monospace;
+        font-size: 1.2rem;
+        cursor: pointer;
+        padding: 0.5rem 1rem;
+    }
 
-.light-mode .header h2 {
-    color: var(--light-accent-silver);
-}
+    .follow-up-container { margin-top: 1.5rem; }
 
-.citation-block {
-    margin-top: 2rem;
-    padding-top: 1rem;
-    border-top: 1px solid currentColor;
-    font-size: 0.9rem;
-}
-.citation-block a { color: #4a8cff; text-decoration: none; }
-.citation-block a:hover { text-decoration: underline; }
+    .follow-up-container a {
+        display: inline-block;
+        margin-right: 1rem;
+        margin-bottom: 0.5rem;
+        padding: 0.4rem 0.8rem;
+        background-color: var(--accent-silver);
+        color: var(--bg-dark);
+        text-decoration: none;
+        border-radius: 4px;
+        font-family: 'VT323', monospace;
+        font-size: 1rem;
+        transition: all 0.2s ease;
+    }
+    .follow-up-container a:hover { background-color: #fff; color: var(--bg-dark); }
+
+    .toggle-button {
+        position: fixed;
+        top: 1rem;
+        right: 1rem;
+        background-color: var(--accent-silver);
+        color: var(--bg-dark);
+        border: none;
+        padding: 0.5rem 1rem;
+        cursor: pointer;
+        font-family: 'VT323', monospace;
+        z-index: 2000;
+    }
+
+    @keyframes fadeIn { from { opacity: 0 } to { opacity: 1 } }
 </style>
 </head>
-
 <body>
-<div class="container">
-    <header class="header">
-        <h1>AIN TRUTH ENGINE OUTPUT</h1>
-        <h2>Data Stream Active • EITL Protocol</h2>
-    </header>
+<button class="toggle-button" id="toggleMode">Toggle Light/Dark</button>
 
-    <div class="result-container" id="resultContainer">
-        <p>⚡ Waiting for query...</p>
+<div class="terminal-window">
+    <p class="typed-text">connected. ai-nspired truth-engine ready.</p>
+    <div class="command-line">
+        <input type="text" class="search-input" id="queryInput" placeholder="Enter query..." autofocus />
     </div>
-
-    <button class="copy-btn" id="copyBtn">Copy Analysis</button>
-    <button class="tts-btn" id="ttsBtn">TTS (Read Aloud)</button>
 </div>
 
-<button id="toggleTheme">Toggle Light/Dark</button>
+<div class="modal-overlay" id="modalOverlay">
+    <div class="modal-container">
+        <div class="modal-header">
+            <p class="modal-title">DATA STREAM // ai-nspired</p>
+            <button class="close-modal" id="closeModal">×</button>
+        </div>
+        <div class="result-container" id="resultContainer"></div>
+        <div class="follow-up-container" id="followUpContainer"></div>
+        <div class="modal-footer" id="modalFooter">
+            <button id="copyBtn">Copy Analysis</button>
+            <button id="ttsBtn">TTS (Read Aloud)</button>
+        </div>
+    </div>
+</div>
 
 <script>
+const API_URL = 'https://justice.ai-n.workers.dev/api/ai/truth'; 
+const queryInput = document.getElementById('queryInput');
+const modalOverlay = document.getElementById('modalOverlay');
+const closeModal = document.getElementById('closeModal');
 const resultContainer = document.getElementById('resultContainer');
+const followUpContainer = document.getElementById('followUpContainer');
+const modalFooter = document.getElementById('modalFooter');
 const copyBtn = document.getElementById('copyBtn');
 const ttsBtn = document.getElementById('ttsBtn');
-const toggleThemeBtn = document.getElementById('toggleTheme');
+const toggleButton = document.getElementById('toggleMode');
 
-// Toggle light/dark
-toggleThemeBtn.addEventListener('click', () => {
-    document.body.classList.toggle('light-mode');
-});
+let isLightMode = false;
 
-// Copy analysis
-copyBtn.addEventListener('click', () => {
-    navigator.clipboard.writeText(resultContainer.innerText)
-    .then(() => { copyBtn.innerText = 'COPIED!'; setTimeout(() => copyBtn.innerText = 'Copy Analysis',2000); })
-    .catch(()=>{copyBtn.innerText='Error'; setTimeout(()=>copyBtn.innerText='Copy Analysis',2000)});
-});
+function openModal() {
+    modalOverlay.classList.add('active');
+    modalFooter.style.display = 'none';
+    followUpContainer.innerHTML = '';
+}
 
-// TTS
-ttsBtn.addEventListener('click', () => {
-    if ('speechSynthesis' in window) {
-        if(window.speechSynthesis.speaking){window.speechSynthesis.cancel(); return;}
-        const utter = new SpeechSynthesisUtterance(resultContainer.innerText);
-        utter.rate = 1.1;
-        window.speechSynthesis.speak(utter);
-    } else { alert('TTS not supported.'); }
-});
+function closeModalFunc() {
+    modalOverlay.classList.remove('active');
+}
 
-// Example: updating output dynamically
-function updateOutput(content, citations=[]) {
-    resultContainer.classList.remove('glow');
-    void resultContainer.offsetWidth; // Trigger reflow
-    resultContainer.classList.add('glow');
-    resultContainer.innerHTML = marked.parse(content);
-    if(citations.length){
-        let citationHTML = `<div class="citation-block"><h3>Sources</h3><ul>`;
-        citations.forEach(c => { citationHTML += `<li><a href="${c.url}" target="_blank">${c.title}</a></li>`; });
-        citationHTML += `</ul></div>`;
-        resultContainer.innerHTML += citationHTML;
+function toggleMode() {
+    isLightMode = !isLightMode;
+    if(isLightMode){
+        document.body.style.backgroundColor = getComputedStyle(document.documentElement).getPropertyValue('--bg-light');
+        document.body.style.color = getComputedStyle(document.documentElement).getPropertyValue('--text-light');
+        modalOverlay.querySelector('.modal-container').style.backgroundColor = getComputedStyle(document.documentElement).getPropertyValue('--modal-bg-light');
+        modalFooter.querySelectorAll('button').forEach(b => b.style.color = getComputedStyle(document.documentElement).getPropertyValue('--text-light'));
+    } else {
+        document.body.style.backgroundColor = getComputedStyle(document.documentElement).getPropertyValue('--bg-dark');
+        document.body.style.color = getComputedStyle(document.documentElement).getPropertyValue('--text-dark');
+        modalOverlay.querySelector('.modal-container').style.backgroundColor = getComputedStyle(document.documentElement).getPropertyValue('--modal-bg-dark');
+        modalFooter.querySelectorAll('button').forEach(b => b.style.color = getComputedStyle(document.documentElement).getPropertyValue('--accent-silver'));
     }
 }
 
-// Example usage
-updateOutput("### Truth Engine Report\nAll systems operational. Patterns verified.", [
-    {title:"EITL Audit Reference", url:"https://ai-n.org"}
-]);
+async function performQuery(query) {
+    if(!query) return;
+    openModal();
+    resultContainer.innerHTML = '<p>⚡ Scanning truth matrix...</p>';
+    try {
+        const resp = await fetch(API_URL, {
+            method: 'POST',
+            headers: {'Content-Type': 'application/json'},
+            body: JSON.stringify({ query })
+        });
+        const data = await resp.json();
+        let html = marked.parse(data.answer || 'No patterns found.');
+        resultContainer.innerHTML = html;
+        modalFooter.style.display = 'flex';
+        if(data.followUp?.length){
+            followUpContainer.innerHTML = data.followUp.map(f => `<a href="#" onclick="performQuery('${f.replace(/'/g,"\\'")}')">${f}</a>`).join('');
+        }
+    } catch(e){
+        resultContainer.innerHTML = `<p style="color:#ff3b30">Error: ${e.message}</p>`;
+        modalFooter.style.display = 'none';
+    }
+}
+
+function copyAnalysis() {
+    navigator.clipboard.writeText(resultContainer.innerText);
+}
+
+function ttsRead() {
+    if('speechSynthesis' in window){
+        if(window.speechSynthesis.speaking){
+            window.speechSynthesis.cancel(); return;
+        }
+        let utter = new SpeechSynthesisUtterance(resultContainer.innerText);
+        utter.rate = 1.1;
+        window.speechSynthesis.speak(utter);
+    } else { alert('TTS not supported'); }
+}
+
+// Event listeners
+queryInput.addEventListener('keypress', e => { if(e.key==='Enter') performQuery(queryInput.value.trim()); });
+closeModal.addEventListener('click', closeModalFunc);
+modalOverlay.addEventListener('click', e => { if(e.target===modalOverlay) closeModalFunc(); });
+copyBtn.addEventListener('click', copyAnalysis);
+ttsBtn.addEventListener('click', ttsRead);
+toggleButton.addEventListener('click', toggleMode);
+
+// Optional: support URL query param
+window.addEventListener('load', () => {
+    const params = new URLSearchParams(window.location.search);
+    const q = params.get('q');
+    if(q) performQuery(decodeURIComponent(q.replace(/\+/g,' ')));
+});
 </script>
 </body>
 </html>
