--- a/theofficialaiuniversity-engine.html
+++ b/theofficialaiuniversity-engine.html
@@ -1,39 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>ai-nspired Truth Engine</title>
-<meta name="description" content="ai-nspired.com • Truth Engine output. Dynamic, professional, toggleable light/dark mode.">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>AI-Nspired :: Truth Engine Interface</title>
+<meta name="description" content="ai-nspired.com • truth-engine. memory keeper. Systems that don’t forget—or flinch.">
 <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
 <style>
-    @import url('https://fonts.googleapis.com/css2?family=VT323&family=Special+Elite&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Crimson+Pro:wght@400;700&display=swap');
 
+    /* --- Mode Variables --- */
     :root {
-        --bg-dark: #010409;
-        --text-dark: #e0e0e0;
-        --border-dark: #30363d;
-        --modal-bg-dark: #0d1117;
-
-        --bg-light: #f8f8ff;
-        --text-light: #1a1a1a;
-        --border-light: #ccc;
-        --modal-bg-light: #ffffff;
-
-        --accent-silver: #c0c0c0;
+        /* Default Silvery Mode */
+        --bg-color: #f8f8ff;
+        --text-color: #1a1a1a;
+        --border-color: #d0d0d0;
+        --modal-bg: #ffffff;
+        --accent-color: #1a2a3a;
+    }
+    [data-mode="dark"] {
+        --bg-color: #1a1a1a;
+        --text-color: #f0f0f0;
+        --border-color: #333333;
+        --modal-bg: #2a2a2a;
+        --accent-color: #c7a17a;
+    }
+    [data-mode="light"] {
+        --bg-color: #ffffff;
+        --text-color: #111111;
+        --border-color: #ccc;
+        --modal-bg: #f9f9f9;
+        --accent-color: #1a2a3a;
+    }
+    [data-mode="mystic"] {
+        --bg-color: #0f0f2a;
+        --text-color: #e0d0ff;
+        --border-color: #5a3f9a;
+        --modal-bg: #1a0f3f;
+        --accent-color: #a17ac7;
     }
 
     body {
         margin: 0;
         padding: 2rem;
-        font-family: 'VT323', monospace;
+        font-family: 'Crimson Pro', serif;
+        background-color: var(--bg-color);
+        color: var(--text-color);
         display: flex;
-        flex-direction: column;
+        justify-content: center;
         align-items: center;
         min-height: 100vh;
-        background-color: var(--bg-dark);
-        color: var(--text-dark);
-        transition: all 0.3s ease;
+        box-sizing: border-box;
+        transition: background-color 0.3s, color 0.3s;
     }
 
     .terminal-window {
@@ -43,241 +61,200 @@
     }
 
     .typed-text {
+        font-weight: 700;
+        font-size: 1.5rem;
         display: inline-block;
         overflow: hidden;
         white-space: nowrap;
-        border-right: 3px solid var(--accent-silver);
+        border-right: 3px solid var(--accent-color);
         animation: typing 3.5s steps(40, end), blink-caret .75s step-end infinite;
     }
 
-    @keyframes typing {
-        from { width: 0 }
-        to { width: 100% }
-    }
-    @keyframes blink-caret {
-        from, to { border-color: transparent }
-        50% { border-color: var(--accent-silver); }
-    }
+    @keyframes typing { from { width: 0 } to { width: 100% } }
+    @keyframes blink-caret { 50% { border-color: var(--accent-color); } }
 
     .command-line {
         display: flex;
         align-items: center;
-        margin-top: 0.5rem;
+        margin-top: 1rem;
     }
-    .command-line::before { content: '>'; margin-right: 1rem; }
+
+    .command-line::before { content: '>'; margin-right: 1rem; font-weight: bold; }
 
     .search-input {
         background: transparent;
         border: none;
-        color: inherit;
-        font-family: 'VT323', monospace;
+        color: var(--text-color);
+        font-family: 'Crimson Pro', serif;
         font-size: 1.5rem;
         flex-grow: 1;
         outline: none;
     }
 
+    /* --- Modal Styles --- */
     .modal-overlay {
         position: fixed;
         top: 0; left: 0;
         width: 100%; height: 100%;
-        background: rgba(13, 17, 23, 0.9);
-        backdrop-filter: blur(8px);
+        background: rgba(0,0,0,0.8);
         display: none;
         justify-content: center;
         align-items: center;
         z-index: 1000;
-        animation: fadeIn 0.5s ease;
     }
     .modal-overlay.active { display: flex; }
 
     .modal-container {
-        background-color: var(--modal-bg-dark);
-        border: 1px solid var(--border-dark);
+        background-color: var(--modal-bg);
+        border: 1px solid var(--border-color);
         border-radius: 8px;
-        width: 90%; max-width: 900px; height: 90vh;
+        width: 90%;
+        max-width: 900px;
+        height: 90vh;
         box-shadow: 0 20px 50px rgba(0,0,0,0.5);
-        display: flex; flex-direction: column;
+        display: flex;
+        flex-direction: column;
+        padding: 1rem 2rem;
+        transition: background-color 0.3s, color 0.3s;
     }
 
-    .modal-header {
-        display: flex; justify-content: space-between; align-items: center;
-        padding: 0.5rem 1.5rem; border-bottom: 1px solid var(--border-dark);
-    }
-    .modal-title { color: var(--accent-silver); }
-    .close-modal { background: none; border: none; color: var(--accent-silver); font-size: 2rem; cursor: pointer; }
+    .modal-header { display: flex; justify-content: space-between; align-items: center; border-bottom: 1px solid var(--border-color); padding-bottom: 0.5rem; }
+    .modal-title { font-weight: 700; color: var(--accent-color); }
+    .close-modal { background: none; border: none; color: var(--accent-color); font-size: 2rem; cursor: pointer; }
 
     .result-container {
-        padding: 2rem;
+        padding: 2rem 0;
         flex-grow: 1;
         overflow-y: auto;
-        transition: all 0.3s ease;
-        font-family: 'Special Elite', cursive;
+        font-family: 'Crimson Pro', serif;
+        color: var(--text-color);
+        transition: background-color 0.3s, color 0.3s;
     }
 
-    .modal-footer {
-        display: none;
-        padding: 1rem;
-        border-top: 1px solid var(--border-dark);
-        justify-content: flex-end; gap: 1rem;
-    }
-    .modal-footer button {
-        background: none;
-        border: 1px solid var(--accent-silver);
-        color: var(--accent-silver);
-        font-family: 'VT323', monospace;
-        font-size: 1.2rem;
-        cursor: pointer;
-        padding: 0.5rem 1rem;
-    }
+    .result-silvery { background-color: var(--bg-color); border-left: 5px solid var(--accent-color); padding: 1.5rem; line-height: 1.8; box-shadow: 0 4px 10px rgba(0,0,0,0.05); }
 
-    .follow-up-container { margin-top: 1.5rem; }
+    .citation-block { margin-top: 2rem; border-top: 1px solid var(--border-color); padding-top: 1rem; font-size: 0.9rem; }
+    .citation-block a { color: var(--accent-color); text-decoration: none; }
+    .citation-block a:hover { text-decoration: underline; }
 
-    .follow-up-container a {
-        display: inline-block;
-        margin-right: 1rem;
-        margin-bottom: 0.5rem;
-        padding: 0.4rem 0.8rem;
-        background-color: var(--accent-silver);
-        color: var(--bg-dark);
-        text-decoration: none;
-        border-radius: 4px;
-        font-family: 'VT323', monospace;
-        font-size: 1rem;
-        transition: all 0.2s ease;
-    }
-    .follow-up-container a:hover { background-color: #fff; color: var(--bg-dark); }
-
-    .toggle-button {
-        position: fixed;
-        top: 1rem;
-        right: 1rem;
-        background-color: var(--accent-silver);
-        color: var(--bg-dark);
-        border: none;
-        padding: 0.5rem 1rem;
-        cursor: pointer;
-        font-family: 'VT323', monospace;
-        z-index: 2000;
-    }
-
-    @keyframes fadeIn { from { opacity: 0 } to { opacity: 1 } }
+    .modal-footer { display: flex; gap: 1rem; justify-content: flex-end; padding-top: 1rem; border-top: 1px solid var(--border-color); }
+    .modal-footer button { padding: 0.5rem 1rem; border: 1px solid var(--accent-color); background: none; color: var(--accent-color); font-weight: 700; cursor: pointer; }
+    
+    /* --- Mode Toggle Buttons --- */
+    .mode-toggle { position: fixed; top: 1rem; right: 1rem; display: flex; gap: 0.5rem; }
+    .mode-toggle button { padding: 0.5rem 1rem; cursor: pointer; border: 1px solid var(--accent-color); background: none; color: var(--accent-color); font-weight: 700; border-radius: 4px; }
 </style>
 </head>
-<body>
-<button class="toggle-button" id="toggleMode">Toggle Light/Dark</button>
+<body data-mode="silvery">
+
+<div class="mode-toggle">
+    <button onclick="setMode('silvery')">Silvery</button>
+    <button onclick="setMode('dark')">Dark</button>
+    <button onclick="setMode('light')">Light</button>
+    <button onclick="setMode('mystic')">Mystic</button>
+</div>
 
 <div class="terminal-window">
-    <p class="typed-text">connected. ai-nspired truth-engine ready.</p>
+    <p class="typed-text">connected. truth-engine ready.</p>
     <div class="command-line">
-        <input type="text" class="search-input" id="queryInput" placeholder="Enter query..." autofocus />
+        <input type="text" class="search-input" id="queryInput" placeholder="Enter query..." autofocus>
     </div>
 </div>
 
-<div class="modal-overlay" id="modalOverlay">
+<div class="modal-overlay" id="modal-overlay">
     <div class="modal-container">
         <div class="modal-header">
             <p class="modal-title">DATA STREAM // ai-nspired</p>
-            <button class="close-modal" id="closeModal">×</button>
+            <button class="close-modal" id="close-modal">×</button>
         </div>
         <div class="result-container" id="resultContainer"></div>
-        <div class="follow-up-container" id="followUpContainer"></div>
         <div class="modal-footer" id="modalFooter">
-            <button id="copyBtn">Copy Analysis</button>
+            <button id="copyAnalysisBtn">Copy Analysis</button>
             <button id="ttsBtn">TTS (Read Aloud)</button>
         </div>
     </div>
 </div>
 
 <script>
-const API_URL = 'https://justice.ai-n.workers.dev/api/ai/truth'; 
+const API_URL = 'https://justice.ai-n.workers.dev/api/ai/truth';
 const queryInput = document.getElementById('queryInput');
-const modalOverlay = document.getElementById('modalOverlay');
-const closeModal = document.getElementById('closeModal');
+const modalOverlay = document.getElementById('modal-overlay');
+const closeModalBtn = document.getElementById('close-modal');
 const resultContainer = document.getElementById('resultContainer');
-const followUpContainer = document.getElementById('followUpContainer');
-const modalFooter = document.getElementById('modalFooter');
-const copyBtn = document.getElementById('copyBtn');
+const copyAnalysisBtn = document.getElementById('copyAnalysisBtn');
 const ttsBtn = document.getElementById('ttsBtn');
-const toggleButton = document.getElementById('toggleMode');
+const body = document.body;
 
-let isLightMode = false;
-
-function openModal() {
-    modalOverlay.classList.add('active');
-    modalFooter.style.display = 'none';
-    followUpContainer.innerHTML = '';
+// --- Mode Functions ---
+function setMode(mode){
+    if(mode==='silvery'){ body.setAttribute('data-mode',''); } 
+    else { body.setAttribute('data-mode', mode); }
 }
 
-function closeModalFunc() {
-    modalOverlay.classList.remove('active');
+// --- Modal Functions ---
+function openModal(){ modalOverlay.classList.add('active'); }
+function closeModal(){ modalOverlay.classList.remove('active'); }
+
+// --- Utility Functions ---
+function chooseStyleForQuery(){ return 'silvery'; }
+
+function copyAnalysisToClipboard(){
+    navigator.clipboard.writeText(resultContainer.innerText).then(()=>{
+        copyAnalysisBtn.innerText='COPIED!';
+        setTimeout(()=>copyAnalysisBtn.innerText='Copy Analysis',2000);
+    });
 }
 
-function toggleMode() {
-    isLightMode = !isLightMode;
-    if(isLightMode){
-        document.body.style.backgroundColor = getComputedStyle(document.documentElement).getPropertyValue('--bg-light');
-        document.body.style.color = getComputedStyle(document.documentElement).getPropertyValue('--text-light');
-        modalOverlay.querySelector('.modal-container').style.backgroundColor = getComputedStyle(document.documentElement).getPropertyValue('--modal-bg-light');
-        modalFooter.querySelectorAll('button').forEach(b => b.style.color = getComputedStyle(document.documentElement).getPropertyValue('--text-light'));
-    } else {
-        document.body.style.backgroundColor = getComputedStyle(document.documentElement).getPropertyValue('--bg-dark');
-        document.body.style.color = getComputedStyle(document.documentElement).getPropertyValue('--text-dark');
-        modalOverlay.querySelector('.modal-container').style.backgroundColor = getComputedStyle(document.documentElement).getPropertyValue('--modal-bg-dark');
-        modalFooter.querySelectorAll('button').forEach(b => b.style.color = getComputedStyle(document.documentElement).getPropertyValue('--accent-silver'));
-    }
+function readAnalysisAloud(){
+    if('speechSynthesis' in window){
+        if(window.speechSynthesis.speaking){ 
+            window.speechSynthesis.cancel(); 
+            ttsBtn.innerText='TTS (Stopped)'; 
+            setTimeout(()=>ttsBtn.innerText='TTS (Read Aloud)',1000); 
+            return; 
+        }
+        const utterance = new SpeechSynthesisUtterance(resultContainer.innerText.replace(/(\n|\t)/g,' '));
+        utterance.rate=1.1;
+        ttsBtn.innerText='TTS (Speaking...)';
+        utterance.onend=()=>{ttsBtn.innerText='TTS (Read Aloud)';}
+        setTimeout(()=>{window.speechSynthesis.speak(utterance);},100);
+    } else alert('Text-to-Speech not supported.');
 }
 
-async function performQuery(query) {
+// --- Query Function ---
+async function performTruthQuery(query){
     if(!query) return;
     openModal();
-    resultContainer.innerHTML = '<p>⚡ Scanning truth matrix...</p>';
-    try {
-        const resp = await fetch(API_URL, {
-            method: 'POST',
-            headers: {'Content-Type': 'application/json'},
-            body: JSON.stringify({ query })
-        });
-        const data = await resp.json();
-        let html = marked.parse(data.answer || 'No patterns found.');
-        resultContainer.innerHTML = html;
-        modalFooter.style.display = 'flex';
-        if(data.followUp?.length){
-            followUpContainer.innerHTML = data.followUp.map(f => `<a href="#" onclick="performQuery('${f.replace(/'/g,"\\'")}')">${f}</a>`).join('');
+    resultContainer.className='result-container';
+    resultContainer.innerHTML='<p>⚡ Scanning truth matrix...</p>';
+    try{
+        const res = await fetch(API_URL,{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify({query})});
+        if(!res.ok) throw new Error(`HTTP error! status: ${res.status}`);
+        const data = await res.json();
+        const chosenStyle=chooseStyleForQuery();
+        resultContainer.className='result-container result-'+chosenStyle;
+        let html = data.answer ? marked.parse(data.answer) : '<p>No results found.</p>';
+        if(data.citations?.length){
+            html+=`<div class="citation-block"><h3>Sources</h3><ul>${data.citations.map(c=>`<li><a href="${c.url}" target="_blank">${c.title}</a></li>`).join('')}</ul></div>`;
         }
-    } catch(e){
-        resultContainer.innerHTML = `<p style="color:#ff3b30">Error: ${e.message}</p>`;
-        modalFooter.style.display = 'none';
+        resultContainer.innerHTML=html;
+    } catch(err){
+        resultContainer.innerHTML=`<h3>System Error</h3><p>${err.message}</p>`;
     }
 }
 
-function copyAnalysis() {
-    navigator.clipboard.writeText(resultContainer.innerText);
-}
+// --- Event Listeners ---
+queryInput.addEventListener('keypress',e=>{if(e.key==='Enter') performTruthQuery(queryInput.value.trim());});
+closeModalBtn.addEventListener('click',closeModal);
+modalOverlay.addEventListener('click',e=>{if(e.target===modalOverlay) closeModal();});
+copyAnalysisBtn.addEventListener('click',copyAnalysisToClipboard);
+ttsBtn.addEventListener('click',readAnalysisAloud);
 
-function ttsRead() {
-    if('speechSynthesis' in window){
-        if(window.speechSynthesis.speaking){
-            window.speechSynthesis.cancel(); return;
-        }
-        let utter = new SpeechSynthesisUtterance(resultContainer.innerText);
-        utter.rate = 1.1;
-        window.speechSynthesis.speak(utter);
-    } else { alert('TTS not supported'); }
-}
-
-// Event listeners
-queryInput.addEventListener('keypress', e => { if(e.key==='Enter') performQuery(queryInput.value.trim()); });
-closeModal.addEventListener('click', closeModalFunc);
-modalOverlay.addEventListener('click', e => { if(e.target===modalOverlay) closeModalFunc(); });
-copyBtn.addEventListener('click', copyAnalysis);
-ttsBtn.addEventListener('click', ttsRead);
-toggleButton.addEventListener('click', toggleMode);
-
-// Optional: support URL query param
-window.addEventListener('load', () => {
+// Initialize query from URL
+window.addEventListener('load',()=>{
     const params = new URLSearchParams(window.location.search);
     const q = params.get('q');
-    if(q) performQuery(decodeURIComponent(q.replace(/\+/g,' ')));
+    if(q){ queryInput.value = decodeURIComponent(q.replace(/\+/g,' ')); performTruthQuery(queryInput.value); }
 });
 </script>
 </body>
