--- a/theofficialaiuniversity-engine.html
+++ b/theofficialaiuniversity-engine.html
@@ -821,7 +821,7 @@
 </head>
 <body data-mode="silvery">
     <div class="terminal-window">
-        <p class="typed-text" id="typedText">Ai-Nspired. Truth-Engine. Connected.</p>
+        <p class="typed-text" id="typedText">the official ai university</p>
 
         <div class="input-container">
             <div class="button-row">
