--- a/theofficialaiuniversity-engine.html
+++ b/theofficialaiuniversity-engine.html
@@ -3,29 +3,42 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>truth</title>
+  <title>Truth Engine :: The Official AI University</title>
   <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&family=Merriweather:wght@300;700&display=swap" rel="stylesheet">
   <style>
-    body{background:#000;color:#fff;margin:0;height:100dvh;display:grid;place-items:center;font-family:monospace}
-    .card{width:92vmin;max-width:800px;background:#000;border:3px solid rgba(250,204,21,.3);border-radius:16px}
-    .header{background:#000;border-bottom:2px solid #facc15;padding:20px;text-align:center;font-size:28px;font-weight:300}
-    .content{padding:20px;height:50dvh;overflow-y:auto}
-    .input-group{padding:20px;position:relative}
-    textarea{width:100%;height:140px;background:rgba(0,0,0,.4);border:2px solid #facc15;border-radius:32px;color:#fff;padding:20px 80px 20px 20px;font-size:18px;resize:none;outline:none;box-sizing:border-box}
-    button{position:absolute;right:30px;bottom:30px;width:55px;height:55px;background:#facc15;color:#000;border:none;border-radius:50%;font-size:32px;font-weight:900;box-shadow:0 4px 20px rgba(250,204,21,.5);display:grid;place-items:center;cursor:pointer}
-    button:hover{transform:scale(1.1);box-shadow:0 6px 30px rgba(250,204,21,.7)}
-    .thinking{text-align:center;padding:60px;font-size:48px;animation:p 2s infinite;color:#facc15}
-    @keyframes p{0%,100%{opacity:.4}50%{opacity:1}}
+    :root{--b:#fff;--p:#1a1a1a;--s:#1a2a3a;--sv:#f0f0f0;--bl:#e0e0e0;--g:rgba(240,240,240,.8);--bs:#f8f8f8;--cb:#1a2a3a;--cl:#c0c0c0}
+    *{box-sizing:border-box;transition:all .3s ease}
+    body{margin:0;background:var(--b);color:var(--p);font-family:'Merriweather',serif;min-height:100vh;display:flex;flex-direction:column;align-items:center;padding:40px 20px;background-image:url('https://www.transparenttextures.com/patterns/white-marble.png'),linear-gradient(to bottom,var(--b) 0%,var(--bl)100%)}
+    .c{max-width:800px;width:100%;padding:3rem;background:var(--b);box-shadow:0 15px 40px rgba(0,0,0,.15),0 0 25px var(--g);border-top:5px solid var(--s)}
+    .h{background:var(--s);padding:2rem .5rem;margin-bottom:2rem;box-shadow:0 5px 15px rgba(0,0,0,.2)}
+    .h h1{font-family:'Cinzel',serif;font-size:clamp(1.8rem,4vw,2.8rem);color:white;margin:0;font-weight:700;text-transform:uppercase;letter-spacing:.2em;text-shadow:0 0 15px var(--g)}
+    .content{padding:2rem 1.5rem;min-height:45vh;background:var(--bs);border-left:5px solid var(--s);box-shadow:inset 0 3px 10px rgba(0,0,0,.05);overflow-y:auto;font-size:1.15rem;line-height:1.9}
+    .input-group{position:relative;margin-top:2rem}
+    textarea{width:100%;height:140px;background:var(--sv);border:3px solid var(--s);border-radius:12px;padding:20px 90px 20px 20px;font-family:'Merriweather',serif;font-size:1.2rem;color:var(--p);outline:none;resize:none}
+    button{position:absolute;right:18px;bottom:18px;width:64px;height:64px;background:var(--s);color:white;border:none;border-radius:50%;font-size:36px;font-weight:700;box-shadow:0 6px 20px rgba(26,42,58,.4);cursor:pointer;display:grid;place-items:center}
+    button:hover{background:#2b3c4f;transform:scale(1.08);box-shadow:0 10px 30px rgba(26,42,58,.6)}
+    .thinking{text-align:center;padding:80px 20px;font-family:'Cinzel',serif;font-size:2rem;color:var(--s);animation:p 2s infinite}
+    @keyframes p{0%,100%{opacity:.35}50%{opacity:1}}
+    footer{margin-top:4rem;font-size:.8rem;color:#888}
   </style>
 </head>
 <body>
-<div class="card">
-  <div class="header">truth</div>
-  <div class="content" id="c"></div>
+<div class="c">
+  <header class="h">
+    <h1>Truth Engine</h1>
+  </header>
+
+  <div class="content" id="c">
+    <div class="thinking">awaiting the architect...</div>
+  </div>
+
   <div class="input-group">
-    <textarea id="i" placeholder="who is the architect..."></textarea>
+    <textarea id="i" placeholder="speak your query..."></textarea>
     <button onclick="go()">⏎</button>
   </div>
+
+  <footer>© 2025 ai-nspired :: the university pillar</footer>
 </div>
 
 <script>
@@ -60,7 +73,6 @@ async function go() {
 
 function done(md) {
   c.innerHTML = marked.parse(md);
-  c.scrollTop = c.scrollHeight;
 }
 </script>
 </body>
